Fix the issue cause  the width to overflow window

--- a/05SignUpForm/style.css
+++ b/05SignUpForm/style.css
@@ -52,7 +52,7 @@ body{
 
     background-color: #fff;
 
-    width: 100vw;
+    
     min-height: 100vh;
 
 }
@@ -70,7 +70,7 @@ body{
 
      /* width: 100%; */
      /* max-width: 480px; */
-     width: 100;
+     width: 100%;
      height: 100%;
 
      padding:calc(var(--mobile-paddding)*2) var(--mobile-paddding);
@@ -169,5 +169,8 @@ body{
   body{
     
     background-image: url(images/background.jpg);
+  }
+  .container{
+    width:clamp(400px,60vw,1000px);
   }
 }
